--- a/app/main.scss
+++ b/app/main.scss
@@ -1,75 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
+@import './mixin';
 @import url('https://fonts.googleapis.com/css2?family=Cinzel:wght@400..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 // ================================ Text ================================
-
-@mixin section-title {
-  font-family: 'Cinzel', serif;
-  font-size: 4rem;
-  line-height: 1.125rem;
-  font-weight: 400;
-}
-
-@mixin display-tile {
-  font-family: 'Cinzel', serif;
-  font-size: 3rem;
-  line-height: calc(56 / 48);
-  font-weight: 400;
-}
-
-@mixin common-title {
-  font-family: 'Cinzel', serif;
-  font-size: 2rem;
-  line-height: 1.5rem;
-  font-weight: 400;
-}
-
-@mixin card-title {
-  font-family: 'Cinzel', serif;
-  font-size: 1.25rem;
-  line-height: 1.8rem;
-  font-weight: 400;
-}
-
-@mixin description {
-  font-size: 0.75rem;
-  line-height: 2;
-  transition: all 0.3s ease-in-out;
-  font-weight: 400;
-  &:hover {
-    font-size: 1.25rem;
-    line-height: 1.6rem;
-  }
-}
-
-@mixin date-caption {
-  font-family: 'Cinzel', serif;
-  font-size: 0.625rem;
-  line-height: 1.6;
-  font-weight: 400;
-}
-
-@mixin menu {
-  font-family: 'Montserrat', sans-serif;
-  font-size: 1rem;
-  font-weight: 500;
-  line-height: 1.25rem;
-}
-
-@mixin display-button {
-  font-family: 'Cinzel', serif;
-  font-size: 1.5rem;
-  line-height: calc(32 / 24);
-  font-weight: 700;
-}
-@mixin common-button {
-  font-family: 'Cinzel', serif;
-  font-size: 1rem;
-  line-height: 1.5rem;
-}
 
 body {
   font-family: 'Montserrat', sans-serif;
@@ -86,6 +21,12 @@ body {
 
 .menu {
   @include menu;
+}
+
+.container-1680 {
+  width: 100%;
+  max-width: 1680px;
+  margin: 0 auto;
 }
 
 // ================================  HEADER ================================
@@ -145,3 +86,4 @@ body {
     }
   }
 }
+// ================================  HEADER ================================
