--- a/app/_mixin.scss
+++ b/app/_mixin.scss
@@ -1,7 +1,7 @@
 @mixin section-title {
   font-family: 'Cinzel', serif;
   font-size: 4rem;
-  line-height: 1.125rem;
+  line-height: 1.125;
   font-weight: 400;
 }
 
@@ -31,6 +31,7 @@
   line-height: 2;
   transition: all 0.3s ease-in-out;
   font-weight: 400;
+
   &:hover {
     font-size: 1.25rem;
     line-height: 1.6rem;
@@ -57,6 +58,7 @@
   line-height: calc(32 / 24);
   font-weight: 700;
 }
+
 @mixin common-button {
   font-family: 'Cinzel', serif;
   font-size: 1rem;
