--- a/app/main.scss
+++ b/app/main.scss
@@ -4,7 +4,6 @@
 @import './mixin.scss';
 @import url('https://fonts.googleapis.com/css2?family=Cinzel:wght@400..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
-
 // ================================ Text ================================
 
 body {
@@ -18,7 +17,6 @@ body {
   background-attachment: fixed;
   background-repeat: no-repeat;
   background-color: #000;
-  padding: 100px;
 }
 
 .menu {
@@ -34,7 +32,11 @@ body {
   max-width: 1640px;
   margin: 0 auto;
 }
-
+.container-1920 {
+  width: 100%;
+  max-width: 1920px;
+  margin: 0 auto;
+}
 // ================================  PADDING ================================
 .pt-160 {
   padding-top: 10rem;
@@ -65,21 +67,25 @@ body {
 
       .menu {
         text-transform: uppercase;
-        background: linear-gradient(90deg,
-            #ffffff 0%,
-            #f5f0d2 32%,
-            #e9dbbd 71%,
-            #ffffff 100%);
+        background: linear-gradient(
+          90deg,
+          #ffffff 0%,
+          #f5f0d2 32%,
+          #e9dbbd 71%,
+          #ffffff 100%
+        );
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
 
         .text {
           text-transform: uppercase;
-          background: linear-gradient(90deg,
-              #ffffff 0%,
-              #f5f0d2 32%,
-              #e9dbbd 71%,
-              #ffffff 100%);
+          background: linear-gradient(
+            90deg,
+            #ffffff 0%,
+            #f5f0d2 32%,
+            #e9dbbd 71%,
+            #ffffff 100%
+          );
           -webkit-background-clip: text;
           -webkit-text-fill-color: transparent;
         }
