--- a/app/main.scss
+++ b/app/main.scss
@@ -13,7 +13,7 @@ body {
   font-weight: 400;
   background-image: url('/2312/main-bg.png');
   background-size: cover;
-  background-position: bottom center;
+  background-position: center;
   background-attachment: fixed;
   background-repeat: no-repeat;
   background-color: #000;
