--- a/app/index.scss
+++ b/app/index.scss
@@ -54,8 +54,6 @@
       margin-bottom: 5rem;
     }
     h1 {
-      color: black;
-      position: relative;
       width: 100%;
       max-width: 1450px;
       aspect-ratio: calc(1451.71 / 182.37);
@@ -67,19 +65,33 @@
       font-size: 3.5rem;
       line-height: 1;
       letter-spacing: 0.06em;
-      z-index: 5;
+      position: relative;
+      z-index: auto;
       &::before {
         content: '';
         position: absolute;
-        top: -5px;
+        top: -42px;
         left: 50%;
         transform: translate(-50%, 0%);
-        width: 100%;
-        height: 100%;
+        width: 171%;
+        height: auto;
         background-repeat: no-repeat;
         background-image: url('/2312/light.png');
-        background-size: contain;
-        z-index: -1;
+        background-size: cover;
+        z-index: 5;
+        aspect-ratio: 1451.71 / 182.37;
+      }
+      &::after {
+        content: 'RISE & CONQUER';
+        z-index: 10;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        background: linear-gradient(90deg, #000 0%, #483705 45%, #000 70%);
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        width: max-content;
       }
     }
   }
