--- a/app/index.scss
+++ b/app/index.scss
@@ -138,4 +138,10 @@
   .div-translateY {
     transform: translateY(-5rem);
   }
+  .social {
+    left: 140px;
+    .mediaList {
+      width: 130.45px;
+    }
+  }
 }
