--- a/app/feature/GamePlay/style.scss
+++ b/app/feature/GamePlay/style.scss
@@ -23,12 +23,49 @@
   .gameplay-item {
     border: 1px solid #DFAD69;
     padding: 25px 30px 25px 30px;
+    background: rgba(0, 0, 0, 0.05);
+    backdrop-filter: blur(10px);
 
     .animate-title {
       @include common-title;
       background-image: linear-gradient(90deg, #feffbc 0%, #ffc671 153.8%);
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
+
+      .angle-icon {
+        width: 45px;
+        height: 45px;
+        position: relative;
+
+        &::after {
+          content: "";
+          width: 39.25px;
+          height: 39.25px;
+          background: #FFFFFF;
+          filter: blur(30px);
+          transition: all 0.3s;
+          position: absolute;
+          top: 0;
+          right: 0;
+          display: inline-block;
+          z-index: 9;
+          opacity: 0;
+        }
+      }
+
+      &:hover {
+        background-image: unset;
+        -webkit-background-clip: unset;
+        -webkit-text-fill-color: unset;
+        // background-color: white;
+        color: white;
+
+        .angle-icon::after {
+          opacity: 1;
+        }
+      }
     }
+
+
   }
 }
