--- a/app/feature/AuctionHouse/style.scss
+++ b/app/feature/AuctionHouse/style.scss
@@ -1,25 +1,6 @@
 @import './../../mixin.scss';
 
 #auctionHouse {
-  h2 {
-    position: relative;
-    background-image: linear-gradient(90deg, #feffbc 0%, #ffc671 153.8%);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    @include section-title;
-    margin-bottom: 120px;
-
-    &::after {
-      position: absolute;
-      background-image: url('./../../../public/2312/line_header.png');
-      width: 324px;
-      display: block;
-      height: 36px;
-      content: "";
-      bottom: -50px;
-    }
-  }
-
   p {
     flex: 1;
     color: white;
@@ -33,14 +14,13 @@
     padding-top: 70px;
 
     ul {
-
       li {
         position: relative;
         color: white;
 
         &::before {
-          content: "";
-          background-image: url("./../../../public/2312/dot_image.png");
+          content: '';
+          background-image: url('./../../../public/2312/dot_image.png');
           width: 32px;
           height: 32px;
           display: inline-block;
@@ -50,6 +30,15 @@
           transform: translateY(-50%);
         }
       }
+    }
+  }
+  .image-main {
+    width: 100%;
+    margin-top: -8%;
+    img {
+      width: 100%;
+      height: auto;
+      aspect-ratio: 1794/623;
     }
   }
 }
