--- a/app/feature/NewsUpdate/style.scss
+++ b/app/feature/NewsUpdate/style.scss
@@ -22,6 +22,18 @@
   .game-fi-box {
     padding: 10px;
 
+    &:hover {
+      .animation-readmore {
+        svg {
+          left: 25%;
+        }
+
+        span {
+          left: 8% !important;
+        }
+      }
+    }
+
     .topLeft-icon {
       top: 5px;
       left: 4px;
@@ -44,11 +56,13 @@
 
     .game-fi-box-wrapper {
       border: 1px solid #dfad69;
+      min-height: 281px;
 
       .content {
         p {
           font-size: 12px;
           transition: all 0.5s;
+          margin-bottom: 20px;
         }
       }
     }
@@ -63,33 +77,42 @@
 
     .animation-readmore {
       span {
+        bottom: 21.5%;
+        position: absolute;
         @include card-title;
         background-image: linear-gradient(90deg, #feffbc 0%, #ffc671 153.8%);
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
         font-size: 16px;
+        transition: all 0.5s;
+        left: 15%;
       }
     }
+
+
 
     &:hover {
       .content {
         p {
+
           font-size: 20px;
+          margin-bottom: 0;
         }
       }
     }
   }
+
   .main-news {
     position: relative;
+
     .leftSide {
       width: 60%;
       max-width: 1009px;
+
       .animation-readmore {
         span {
-          background: var(
-            --text-gardient,
-            linear-gradient(90deg, #feffbc 0%, #ffc671 153.8%)
-          );
+          background: var(--text-gardient,
+              linear-gradient(90deg, #feffbc 0%, #ffc671 153.8%));
           background-clip: text;
           -webkit-background-clip: text;
           -webkit-text-fill-color: transparent;
@@ -98,6 +121,7 @@
           font-weight: bold;
         }
       }
+
       .main-news-item-footer,
       .main-news-item-content {
         max-width: 830px;
@@ -112,6 +136,7 @@
       height: auto;
       aspect-ratio: 954.05/508.83;
       z-index: -1;
+
       img {
         width: 100%;
       }
@@ -119,26 +144,60 @@
   }
 
   .animation-readmore {
-    position: relative;
     padding-left: calc(2.125rem + 0.625rem);
     transition: all 0.5s ease-in-out;
+
     * {
       transition: all 0.5s ease-in-out;
     }
+
     svg {
+      transition: all 0.5s ease-in-out;
       position: absolute;
-      top: 50%;
-      left: 10%;
+      left: 50px;
       width: 2.125rem;
       height: auto;
-      transform: translate(-50%, -50%);
+      bottom: 25%;
     }
+
     &:hover {
       padding-left: 0;
       padding-right: calc(2.125rem + 0.625rem);
-      svg {
-        left: 90%;
-      }
+
+
+    }
+  }
+
+  .swiper-update {
+    .swiper-wrapper {
+      padding-bottom: 100px;
+    }
+
+
+    .dot-active,
+    .swiperGamePlay .dot-active,
+    .swiper-newupdate .dot-active {
+      display: none;
+    }
+
+    .swiper-pagination-bullet-active .dot-active,
+    .swiperGamePlay .swiper-pagination-bullet-active .dot-active,
+    .swiper-newupdate .swiper-pagination-bullet-active .dot-active {
+      display: inline-block;
+    }
+
+    .swiper-pagination-bullet-active .dot-unActive,
+    .swiperGamePlay .swiper-pagination-bullet-active .dot-unActive,
+    .swiper-newupdate .swiper-pagination-bullet-active .dot-unActive {
+      display: none;
+    }
+
+    .dot-carousel-gamefim {
+      width: 13px !important;
+      height: 13px !important;
+      display: inline-block !important;
+      background-color: unset !important;
+      opacity: 1 !important;
     }
   }
 }
