--- a/app/feature/Footer/style.scss
+++ b/app/feature/Footer/style.scss
@@ -39,6 +39,14 @@
   }
 }
 
+@media screen and (max-width: 1440px) {
+  #footer {
+    .line-footer {
+      width: 1200px;
+    }
+  }
+}
+
 
 @media screen and (max-width: 1280px) {
   #footer {
@@ -54,7 +62,7 @@
           font-size: 20px;
         }
 
-        width: calc(100% / 3);
+        width: calc(100% / 3 - 20px);
         font-size: 12px;
 
         img {
@@ -108,7 +116,7 @@
             font-size: 20px;
           }
 
-          width : calc(100% / 3);
+          width : calc(100% / 3 - 20px);
           font-size: 14px;
 
           img {
@@ -157,7 +165,7 @@
             font-size: 16px;
           }
 
-          width: 50%;
+          width: calc(50% - 20px);
           font-size: 10px;
 
           img {
