--- a/app/feature/GameFi/style.scss
+++ b/app/feature/GameFi/style.scss
@@ -9,3 +9,87 @@
     max-width: 41.875rem;
   }
 }
+#gameFiM {
+  margin-top: 8rem;
+  .swiper {
+    overflow: visible;
+    margin-top: 16rem;
+  }
+  .gamefiMe {
+    margin-top: 3.75rem;
+  }
+  .gamefiMe-item {
+    position: relative;
+    width: 100%;
+    height: auto;
+    aspect-ratio: 253/242;
+
+    &::after {
+      content: '';
+      background-image: url('/2312/frame.png');
+      background-size: cover;
+      top: 0;
+      left: 0;
+      background-size: cover;
+      width: 100%;
+      height: 100%;
+      position: absolute;
+    }
+    .gamefiMe-item-image {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      width: 81%;
+      height: auto;
+      aspect-ratio: 1 / 1;
+      &.active {
+        &::before {
+          content: '';
+          position: absolute;
+          top: 50%;
+          left: 50%;
+          transform: translate(-50%, -50%);
+          width: 114%;
+          height: auto;
+          border-radius: 50%;
+          background: radial-gradient(
+            circle,
+            rgba(255, 255, 255, 1) 70%,
+            rgba(255, 255, 255, 0) 100%
+          );
+          z-index: -1;
+          filter: blur(20px);
+          opacity: 1;
+          aspect-ratio: 1.1;
+        }
+      }
+    }
+  }
+  .gameFiBg {
+    width: 80%;
+    max-width: 1280px;
+    top: 80%;
+    transform: translateY(-50%);
+  }
+}
+
+@media screen and (max-width: 1440px) {
+  #gameFiM {
+    .gameFiBg {
+      width: 70%;
+    }
+    .swiper {
+      margin-top: 10rem;
+    }
+  }
+}
+
+@media screen and (max-width: 768px) {
+  #gameFiM {
+    margin-top: 30vh;
+    .gameFiBg {
+      width: 60%;
+    }
+  }
+}
