--- a/app/index.scss
+++ b/app/index.scss
@@ -150,58 +150,204 @@
   }
 }
 
-#gameFiM {
-  .swiper {
-    overflow: visible;
-    margin-top: -4rem;
-  }
-  .gamefiMe {
-    margin-top: 3.75rem;
-  }
-  .gamefiMe-item {
-    position: relative;
-    width: 100%;
-    height: auto;
-    aspect-ratio: 253/242;
+// #gameFiM {
+//   margin-top: 8rem;
+//   .swiper {
+//     overflow: visible;
+//     margin-top: 16rem;
+//   }
+//   .gamefiMe {
+//     margin-top: 3.75rem;
+//   }
+//   .gamefiMe-item {
+//     position: relative;
+//     width: 100%;
+//     height: auto;
+//     aspect-ratio: 253/242;
 
-    &::after {
-      content: '';
-      background-image: url('/2312/frame.png');
-      background-size: cover;
-      top: 0;
-      left: 0;
-      background-size: cover;
-      width: 100%;
-      height: 100%;
-      position: absolute;
+//     &::after {
+//       content: '';
+//       background-image: url('/2312/frame.png');
+//       background-size: cover;
+//       top: 0;
+//       left: 0;
+//       background-size: cover;
+//       width: 100%;
+//       height: 100%;
+//       position: absolute;
+//     }
+//     .gamefiMe-item-image {
+//       position: absolute;
+//       top: 50%;
+//       left: 50%;
+//       transform: translate(-50%, -50%);
+//       width: 81%;
+//       height: auto;
+//       aspect-ratio: 1 / 1;
+//       &.active {
+//         &::before {
+//           content: '';
+//           position: absolute;
+//           top: 50%;
+//           left: 50%;
+//           transform: translate(-50%, -50%);
+//           width: 114%;
+//           height: auto;
+//           border-radius: 50%;
+//           background: radial-gradient(
+//             circle,
+//             rgba(255, 255, 255, 1) 70%,
+//             rgba(255, 255, 255, 0) 100%
+//           );
+//           z-index: -1;
+//           filter: blur(20px);
+//           opacity: 1;
+//           aspect-ratio: 1.1;
+//         }
+//       }
+//     }
+//   }
+//   .gameFiBg {
+//     width: 80%;
+//     max-width: 1280px;
+//     top: 80%;
+//     transform: translateY(-50%);
+//   }
+// }
+
+@media only screen and (max-width: 1536px) {
+  .section-banner {
+    .container-1920 {
+      .logo-text {
+        width: 30vw;
+      }
     }
-    .gamefiMe-item-image {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      width: 81%;
-      height: auto;
-      aspect-ratio: 1 / 1;
-      &.active {
+  }
+}
+
+@media only screen and (max-width: 1440px) {
+  .section-banner {
+    .container-1920 {
+      &::before,
+      &::after {
+        width: 110%;
+        height: auto;
+        aspect-ratio: 16/9;
+      }
+      .content-wrapper {
+        padding-bottom: 0;
+      }
+      h1 {
+        font-size: 3rem;
         &::before {
-          content: '';
-          position: absolute;
           top: 50%;
-          left: 50%;
           transform: translate(-50%, -50%);
-          width: 114%;
+        }
+      }
+    }
+    .list-apps {
+      .app-item {
+        .icon {
+          svg {
+            width: 3rem;
+          }
+        }
+      }
+    }
+  }
+}
+
+@media only screen and (max-width: 1280px) {
+  .section-banner {
+    .div-translateY {
+      transform: translateY(0);
+    }
+    .container-1920 {
+      &::before,
+      &::after {
+        width: 120%;
+      }
+      .logo-text {
+        margin-bottom: 0;
+      }
+    }
+  }
+}
+
+@media only screen and (max-width: 1024px) {
+  .section-banner {
+    .container-1920 {
+      .logo-text {
+        width: 41vw;
+        max-width: unset;
+        margin-bottom: -4rem;
+      }
+      h1 {
+        margin-bottom: -1.5rem;
+      }
+      &::before,
+      &::after {
+        width: 140%;
+      }
+      .content-wrapper {
+        transform: translateY(3rem);
+      }
+    }
+    .social {
+      .mediaList {
+        svg {
+          width: 3.5rem;
           height: auto;
-          border-radius: 50%;
-          background: radial-gradient(
-            circle,
-            rgba(255, 255, 255, 1) 70%,
-            rgba(255, 255, 255, 0) 100%
-          );
-          z-index: -1;
-          filter: blur(20px);
-          opacity: 1;
-          aspect-ratio: 1.1;
+          aspect-ratio: 1/1;
+        }
+      }
+    }
+    .div-translateY {
+      transform: translateY(3rem);
+    }
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .section-banner {
+    .social {
+      .mediaList {
+        display: none;
+      }
+    }
+    .container-1920 {
+      &::before,
+      &::after {
+        width: 200%;
+      }
+      .content-wrapper {
+        transform: translateY(46%);
+      }
+      .logo-text {
+        width: 68vw;
+        margin-bottom: -3rem;
+      }
+      h1 {
+        margin-bottom: -0.5rem;
+        font-size: 6vw;
+      }
+    }
+    .list-apps {
+      gap: 4vw;
+      .app-item {
+        padding-right: 0;
+        padding-left: 0;
+        gap: 5px;
+        .icon {
+          svg {
+            width: 5vw;
+          }
+          &::before {
+            filter: blur(8px);
+          }
+        }
+        .icon-name {
+          font-size: 2vw;
         }
       }
     }
