--- a/app/main.scss
+++ b/app/main.scss
@@ -1,11 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-@import './mixin';
 @import url('https://fonts.googleapis.com/css2?family=Cinzel:wght@400..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
-
+@import './mixin';
 // ================================ Text ================================
-
+html {
+  width: 100vw;
+  overflow-x: hidden;
+}
 body {
   font-family: 'Montserrat', sans-serif;
   font-size: 1.5rem;
@@ -30,12 +32,6 @@ body {
 .container-1640 {
   width: 100%;
   max-width: 1640px;
-  margin: 0 auto;
-}
-
-.container-1920 {
-  width: 100%;
-  max-width: 1920px;
   margin: 0 auto;
 }
 
@@ -76,4 +72,39 @@ h2.lineskin {
 
 .date {
   @include date-caption;
+}
+
+@media only screen and (max-width: 1980px) {
+  .container-1920 {
+    max-width: unset;
+    padding-left: 2rem;
+    padding-right: 2rem;
+  }
+}
+
+@media only screen and (max-width: 1700px) {
+  .container-1640 {
+    max-width: unset;
+    padding-left: 2rem;
+    padding-right: 2rem;
+  }
+}
+
+@media screen and (max-width: 1700px) {
+  .section-banner .social {
+    left: 0 !important;
+  }
+}
+@media screen and (max-width: 1440px) {
+  body {
+    font-size: 1.2rem;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .container-1920,
+  .container-1640 {
+    padding-right: 1rem;
+    padding-left: 1rem;
+  }
 }
