--- a/app/feature/GamePlay/style.scss
+++ b/app/feature/GamePlay/style.scss
@@ -58,6 +58,44 @@
 }
 
 
+@media screen and (max-width: 1280px) {
+  #gameplay {
+    .content-desktop {
+      display: none;
+    }
+
+    .swiperGamePlay {
+      display: block;
+      overflow: visible;
+    }
+
+    .title {
+      text-align: center;
+      margin-bottom: 50px;
+
+      h2 {
+        &::after {
+          position: absolute;
+          left: 50%;
+          transform: translateX(-50%);
+          bottom: -40px;
+          width: 130px;
+          background-repeat: no-repeat;
+          height: 30px;
+          background-size: contain;
+        }
+      }
+    }
+
+    .gameplay-item {
+      .animate-title {
+        font-size: 24px;
+      }
+    }
+
+  }
+}
+
 @media screen and (max-width:1024px) {
   #gameplay {
     @apply px-8;
@@ -84,9 +122,7 @@
       }
     }
 
-    .content-desktop {
-      display: none;
-    }
+
 
     .swiper-pagination {
       text-align: center;
