--- a/app/feature/GameFi/style.scss
+++ b/app/feature/GameFi/style.scss
@@ -72,6 +72,9 @@
     top: 80%;
     transform: translateY(-50%);
   }
+  .content {
+    max-width: 36.875rem;
+  }
 }
 
 @media screen and (max-width: 1440px) {
@@ -85,11 +88,56 @@
   }
 }
 
+@media screen and (max-width: 820px) {
+  #gameFiM {
+    .gameFiBg {
+      width: 100%;
+      max-width: unset;
+      position: static;
+      transform: unset;
+    }
+    .group-content {
+      width: 100%;
+      h3,
+      .content {
+        max-width: 80%;
+        margin: 0 auto;
+        text-align: center;
+      }
+    }
+    .content {
+      max-width: unset;
+    }
+    h2 {
+      align-items: center;
+    }
+    h3 {
+      font-size: 6vw;
+    }
+    .swiper {
+      margin-top: 3rem;
+    }
+  }
+}
+
 @media screen and (max-width: 768px) {
   #gameFiM {
-    margin-top: 30vh;
-    .gameFiBg {
-      width: 60%;
+    margin-top: 35vh;
+  }
+}
+
+@media screen and (max-width: 576px) {
+  #gameFiM {
+    margin-top: 15vh;
+    .group-content {
+      margin-bottom: 1rem;
+      h3,
+      .content {
+        max-width: 100%;
+      }
+    }
+    .swiper {
+      margin-top: 2rem;
     }
   }
 }
