--- a/app/main.scss
+++ b/app/main.scss
@@ -19,6 +19,8 @@ body {
   background-attachment: fixed;
   background-repeat: no-repeat;
   background-color: #000;
+  max-width: 100vw;
+  overflow-x: hidden;
 }
 
 .menu {
@@ -67,6 +69,8 @@ h2.lineskin {
     display: block;
     height: auto;
     aspect-ratio: 324/35;
+    background-size: contain;
+    background-repeat: no-repeat;
   }
 }
 
@@ -100,11 +104,32 @@ h2.lineskin {
     font-size: 1.2rem;
   }
 }
+@media screen and (max-width: 820px) {
+  h2.lineskin {
+    margin-bottom: 1.5rem;
+    font-size: 7.5vw;
+    &::after {
+      width: 250px;
+    }
+  }
+}
 
 @media screen and (max-width: 768px) {
   .container-1920,
   .container-1640 {
     padding-right: 1rem;
     padding-left: 1rem;
+  }
+}
+
+@media screen and (max-width: 576px) {
+  h2.lineskin {
+    margin-bottom: 1rem;
+    &::after {
+      width: 100px;
+    }
+  }
+  body {
+    font-size: 1rem;
   }
 }
