--- a/app/feature/MysticalStone/style.scss
+++ b/app/feature/MysticalStone/style.scss
@@ -36,4 +36,139 @@
       }
     }
   }
+
+  img[alt='list-stone'] {
+    height: auto;
+    margin-top: -100px;
+  }
+}
+
+@media screen and (max-width: 1680px) {
+  #mysticalStone {
+    .content {
+      font-size: 20px;
+    }
+  }
+
+}
+
+@media screen and (max-width :1440px) {
+  #mysticalStone {
+
+    img[alt='list-stone'] {
+      height: auto;
+      margin-top: -80px;
+    }
+
+
+    .title {
+      text-align: center;
+
+      h2 {
+        &::after {
+          position: absolute;
+          left: 50%;
+          transform: translateX(-50%);
+          bottom: -40px;
+          width: 130px;
+          background-repeat: no-repeat;
+          height: 30px;
+          background-size: contain;
+        }
+      }
+    }
+
+    .content {
+      flex-direction: column;
+      align-items: center;
+
+      p {
+        padding-right: 0;
+        width: 75%;
+        text-align: center;
+      }
+    }
+
+    .highlight-wrapper {
+      padding-top: 90px;
+      margin-top: 20px;
+    }
+  }
+}
+
+@media screen and (max-width: 1024px) {
+  #mysticalStone {
+    img[alt='list-stone'] {
+      height: auto;
+      margin-top: -50px;
+    }
+
+    .highlight-wrapper {
+      padding-top: 90px;
+      margin-top: 20px;
+    }
+
+    .content {
+
+
+      p {
+        padding-right: 0;
+        width: 90%;
+        font-size: 18px;
+        text-align: center;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 820px) {
+  #mysticalStone {
+    .content {
+      p {
+        padding-right: 0;
+        font-size: 16px;
+      }
+    }
+
+    .highlight-wrapper {
+      transform: scale(0.7);
+
+      ul {
+        font-size: 22px;
+      }
+    }
+  }
+}
+
+@media screen and (max-width:768px) {
+  #mysticalStone {
+    .highlight-wrapper {
+      margin-top: -30px;
+    }
+  }
+}
+
+@media screen and (max-width: 576px) {
+  #mysticalStone {
+    .content {
+      p {
+        padding-right: 0;
+        font-size: 12px;
+      }
+    }
+
+    .highlight-wrapper {
+      transform: scale(0.5);
+      margin-top: -70px;
+
+      ul {
+        font-size: 20px;
+      }
+    }
+
+    img[alt='list-stone'] {
+      height: auto;
+      margin-top: -100px;
+    }
+  }
 }
