--- a/app/feature/GamePlay/style.scss
+++ b/app/feature/GamePlay/style.scss
@@ -98,7 +98,6 @@
 
 @media screen and (max-width:1024px) {
   #gameplay {
-    @apply px-8;
 
     .title {
       text-align: center;
@@ -175,6 +174,10 @@
         font-size: 10px;
       }
 
+    }
+
+    .swiperGamePlay {
+      padding-bottom: 50px;
     }
   }
 
