--- a/app/feature/AuctionHouse/style.scss
+++ b/app/feature/AuctionHouse/style.scss
@@ -32,13 +32,154 @@
       }
     }
   }
+
   .image-main {
     width: 100%;
     margin-top: -8%;
+
     img {
       width: 100%;
       height: auto;
       aspect-ratio: 1794/623;
+    }
+  }
+}
+
+@media screen and (max-width: 1680px) {
+  #auctionHouse {
+    .content {
+      font-size: 20px;
+    }
+  }
+
+}
+
+@media screen and (max-width :1440px) {
+  #auctionHouse {
+
+    img[alt='auction-house'] {
+      height: auto;
+      margin-top: -80px;
+    }
+
+
+    .title {
+      text-align: center;
+
+      h2 {
+        &::after {
+          position: absolute;
+          left: 50%;
+          transform: translateX(-50%);
+          bottom: -40px;
+          width: 130px;
+          background-repeat: no-repeat;
+          height: 30px;
+          background-size: contain;
+        }
+      }
+    }
+
+    .content {
+      flex-direction: column;
+      align-items: center;
+
+      p {
+        padding-right: 0;
+        width: 75%;
+        text-align: center;
+      }
+    }
+
+    .highlight-wrapper {
+      padding-top: 90px;
+      margin-top: 20px;
+    }
+  }
+}
+
+@media screen and (max-width: 1280px) {
+  #auctionHouse .image-main {
+    margin-top: 0;
+  }
+}
+
+@media screen and (max-width: 1024px) {
+  #auctionHouse {
+    img[alt='auction-house'] {
+      height: auto;
+      margin-top: -50px;
+    }
+
+    .highlight-wrapper {
+      padding-top: 90px;
+      margin-top: 20px;
+    }
+
+    .content {
+
+
+      p {
+        padding-right: 0;
+        width: 90%;
+        font-size: 18px;
+        text-align: center;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 820px) {
+  #auctionHouse {
+    .content {
+      p {
+        padding-right: 0;
+        font-size: 16px;
+      }
+    }
+
+    .highlight-wrapper {
+      transform: scale(0.7);
+
+      ul {
+        font-size: 22px;
+      }
+    }
+  }
+}
+
+@media screen and (max-width:768px) {
+  #auctionHouse {
+    .highlight-wrapper {
+      margin-top: -30px;
+    }
+  }
+}
+
+@media screen and (max-width: 576px) {
+  #auctionHouse {
+    padding-top: 90px;
+
+    .content {
+      p {
+        width: 100%;
+        padding-right: 0;
+        font-size: 12px;
+      }
+    }
+
+    .highlight-wrapper {
+      transform: scale(0.45);
+      margin-top: -70px;
+
+      ul {
+        font-size: 24px;
+      }
+    }
+
+    img[alt='auction-house'] {
+      height: auto;
+      margin-top: -100px;
     }
   }
 }
