--- a/app/feature/NewsUpdate/style.scss
+++ b/app/feature/NewsUpdate/style.scss
@@ -102,8 +102,13 @@
     }
   }
 
+  .title-mobile {
+    display: none;
+  }
+
   .main-news {
     position: relative;
+
 
     .leftSide {
       width: 60%;
@@ -199,5 +204,91 @@
       background-color: unset !important;
       opacity: 1 !important;
     }
+  }
+}
+
+@media screen and (max-width : 1024px) {
+  #community {
+    .arrows-swiper {
+      margin-top: -12% !important;
+    }
+  }
+}
+
+@media screen and (max-width : 820px) {
+  #community {
+    .arrows-swiper {
+      margin-top: -17% !important;
+    }
+  }
+}
+
+@media screen and (max-width: 920px) {
+  #community {
+    .title-mobile {
+      display: block;
+    }
+
+    .main-news {
+      display: flex;
+      flex-direction: column-reverse;
+
+      .leftSide {
+        width: 100%;
+
+        .lineskin {
+          display: none;
+        }
+      }
+
+      .rightSide {
+        width: 100%;
+        position: static;
+      }
+    }
+
+    .arrows-swiper {
+      margin-top: -19% !important;
+
+      img {
+        width: 40px;
+      }
+    }
+
+  }
+}
+
+@media screen and (max-width : 768px) {
+  #community {
+    .title-mobile {
+      display: block;
+    }
+
+    .main-news {
+      display: flex;
+      flex-direction: column-reverse;
+
+      .leftSide {
+        width: 100%;
+
+        .lineskin {
+          display: none;
+        }
+      }
+
+      .rightSide {
+        width: 100%;
+        position: static;
+      }
+    }
+
+    .arrows-swiper {
+      margin-top: -19% !important;
+
+      img {
+        width: 40px;
+      }
+    }
+
   }
 }
