--- a/app/feature/GamePlay/style.scss
+++ b/app/feature/GamePlay/style.scss
@@ -57,6 +57,11 @@
   }
 }
 
+@media screen and (max-width : 1440px) {
+  #gameplay {
+    padding-top: 40px;
+  }
+}
 
 @media screen and (max-width: 1280px) {
   #gameplay {
