--- a/app/feature/MysticalStone/style.scss
+++ b/app/feature/MysticalStone/style.scss
@@ -21,6 +21,7 @@
       li {
         position: relative;
         color: white;
+        cursor: pointer;
 
         &::before {
           content: '';
@@ -32,6 +33,12 @@
           left: -40px;
           position: absolute;
           transform: translateY(-50%);
+        }
+
+        &:hover {
+          &::before {
+            background-image: url('./../../../public/2312/whiteDot.png');
+          }
         }
       }
     }
