--- a/app/feature/NewsUpdate/style.scss
+++ b/app/feature/NewsUpdate/style.scss
@@ -239,6 +239,8 @@
   }
 
   .swiper-update {
+    overflow: visible;
+
     .swiper-wrapper {
       padding-bottom: 100px;
     }
@@ -268,6 +270,17 @@
       display: inline-block !important;
       background-color: unset !important;
       opacity: 1 !important;
+    }
+  }
+
+  .wrraper-slider {
+    position: relative;
+
+    .arrows-swiper {
+      position: absolute !important;
+      width: max-content;
+      right: 0;
+      bottom: -20px;
     }
   }
 }
@@ -373,11 +386,30 @@
 
     .arrows-swiper {
       margin-top: -19% !important;
+      bottom: -10px !important;
 
       img {
-        width: 40px;
+        width: 35px;
       }
     }
 
+  }
+}
+
+@media screen and (max-width : 576px) {
+  #community {
+
+
+    padding-top: 100px;
+
+    .view-bg {
+      transform: translateX(-40%);
+    }
+
+    .animation {
+      span {
+        font-size: 1rem;
+      }
+    }
   }
 }
