--- a/app/feature/Footer/style.scss
+++ b/app/feature/Footer/style.scss
@@ -79,7 +79,7 @@
 
       .footer-text-item {
         h3 {
-          font-size: 20px;
+          font-size: 18px;
         }
 
         width: calc(100% / 3 - 20px);
@@ -88,6 +88,12 @@
         img {
           width: 9px;
           height: 9px;
+        }
+
+        ul {
+          li {
+            font-size: 14px;
+          }
         }
       }
 
