--- a/app/feature/MysticalStone/style.scss
+++ b/app/feature/MysticalStone/style.scss
@@ -113,6 +113,13 @@
     .highlight-wrapper {
       padding-top: 90px;
       margin-top: 20px;
+      transform: scale(0.8);
+
+      ul {
+        li {
+          font-size: 22px;
+        }
+      }
     }
 
     .content {
